[gd_scene load_steps=6 format=3 uid="uid://c3yiljg7spj3h"]

[ext_resource type="Script" path="res://scenes/character/stats_ui.gd" id="1_m46ty"]
[ext_resource type="Texture2D" uid="uid://ymi0rabpy8sr" path="res://assets/tilemap_packed.png" id="1_w3ew0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t020g"]
atlas = ExtResource("1_w3ew0")
region = Rect2(112, 144, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_pis3e"]
font_size = 21
shadow_color = Color(0, 0, 0, 0.541176)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbr14"]
atlas = ExtResource("1_w3ew0")
region = Rect2(96, 128, 16, 16)

[node name="StatsUI" type="VBoxContainer"]
offset_left = -32.0
offset_top = -96.0
offset_right = 24.0
offset_bottom = -28.0
theme_override_constants/separation = 0
alignment = 2
script = ExtResource("1_m46ty")

[node name="HP" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Icon" type="TextureRect" parent="HP"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_t020g")
expand_mode = 1
stretch_mode = 5

[node name="HealthLabel" type="Label" parent="HP"]
unique_name_in_owner = true
layout_mode = 2
text = "99"
label_settings = SubResource("LabelSettings_pis3e")

[node name="Armor" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Icon" type="TextureRect" parent="Armor"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_bbr14")
expand_mode = 1
stretch_mode = 5

[node name="ArmorLabel" type="Label" parent="Armor"]
unique_name_in_owner = true
layout_mode = 2
text = "99"
label_settings = SubResource("LabelSettings_pis3e")
